       2.6: Released TBD

       NEW: 1-2-5 scaling on FFT axis.
       NEW: Audio waterfall.
       NEW: Remember AGC settings between sessions.
     FIXED: Stuttering audio with Pulseaudio backend.
     FIXED: Use system font on FFT plot (too small font on high res displays).
     FIXED: Broken FUNcube Dongle Pro+ support on Mac OS X 10.11.4.
     FIXED: Correct display of negative offsets between -1 and 0 kHz.
     FIXED: Reset frequency digits below the one that is being changed.
     FIXED: LNB LO could not be set from I/O confugration dialog.
  IMPROVED: Input decimator performance.
  IMPROVED: SDRPlay integration.
  IMPROVED: Only probe for devices when the program is started.
  IMPROVED: 1-2-5 scaling on FFT axis.
  IMPROVED: Allow user to enter ALSA device name.
  IMPROVED: Set default audio FFT range to -70...0 dB.
  IMPROVED: Restore audio FFT dB scaling between sessions.

     2.5.3: Released February 3, 2016.

       NEW: Set and read squelch via remote control socket.
     FIXED: Toolbar appearance on Mac OS X.
  IMPROVED: Reworked CW reception so that channel is now centered on carrier.
  IMPROVED: Shortcuts to view/hide some of the dock widgets.
  IMPROVED: Respond to \dump_state remote command (needed by some clients).
  IMPROVED: Read remote frequency as double for rigctl compatibility.

     2.5.2: Released January 21, 2016.

       NEW: Support for Red Pitaya (RX only).
       NEW: Build with GNU Radio 3.7.9.
  IMPROVED: Increased spacing between frequency divisions to prevent overlap.
  IMPROVED: Reduced minimum window size requirement to around 800x600 pixels.

       2.5  Released January 7, 2016

       NEW: Read out signal time and on the waterfall (disabled on OS X).
       NEW: Save waterfall to graphics file.
       NEW: Allow user settable waterfall time span (up to 24 hours).
       NEW: Cmake option to build using gr-audio backend (Andrea Merello).
     FIXED: FM stereo (revert to pre-2.4 behavior).